--- a/package.json
+++ b/package.json
@@ -42,27 +42,21 @@
     "win": {
       "target": [
         "nsis",
-        "msix"
+        "appx"
       ],
       "icon": "build/app-icon.png",
       "asarUnpack": [
         "yt-dlp.exe"
       ]
     },
-    "msix": {
+    "appx": {
       "identityName": "BurntToasters.ROSI",
       "publisher": "CN=BC0CB990-55E8-4580-97B7-1E2DAA4B44F6",
       "publisherDisplayName": "BurntToasters",
       "displayName": "ROSI",
       "backgroundColor": "#ffffff",
-      "logo": "build/app-icon.png",
       "languages": [
         "en-US"
-      ],
-      "description": "Electron GUI for yt-dlp",
-      "website": "https://github.com/BurntToasters/rosi",
-      "capabilities": [
-        "internetClient"
       ]
     },
     "mac": {
