--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rosi",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Electron GUI for yt-dlp",
   "main": "main.js",
   "scripts": {
@@ -57,7 +57,15 @@
       "backgroundColor": "#ffffff",
       "languages": [
         "en-US"
-      ]
+      ],
+      "tileImages": {
+        "square44x44Logo": "build/Square44x44Logo.png",
+        "square71x71Logo": "build/Square71x71Logo.png",
+        "square150x150Logo": "build/Square150x150Logo.png",
+        "wide310x150Logo": "build/Wide310x150Logo.png",
+        "square310x310Logo": "build/Square310x310Logo.png",
+        "storeLogo": "build/StoreLogo.png"
+      }
     },
     "mac": {
       "target": "dmg",
