--- a/package.json
+++ b/package.json
@@ -49,15 +49,16 @@
         "yt-dlp.exe"
       ]
     },
- "appx": {
-   "identityName": "BurntToasters.ROSI",
-   "publisher": "CN=BC0CB990-55E8-4580-97B7-1E2DAA4B44F6",
-   "publisherDisplayName": "BurntToasters",
-   "displayName":  "ROSI",
-   "backgroundColor": "#ffffff",
-   "minVersion":   "10.0.10240.0",
-   "maxVersionTested": "10.0.22621.0"
- },
+"appx": {
+  "identityName": "BurntToasters.ROSI",
+  "publisher": "CN=BC0CB990-55E8-4580-97B7-1E2DAA4B44F6",
+  "publisherDisplayName": "BurntToasters",
+  "displayName": "ROSI",
+  "backgroundColor": "#ffffff",
+  "minVersion": "10.0.10240.0",
+  "maxVersionTested": "10.0.22621.0",
+  "customManifestPath": "build/appx/appxmanifest.xml"
+},
     "mac": {
       "target": "dmg",
       "icon": "build/app-icon.png",
