--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "electron-packager": "^17.1.2"
   },
   "dependencies": {
-    "glob": "^11.0.1"
+    "glob": "^11.0.1",
+    "sanitize-filename": "^1.6.3"
   },
   "build": {
     "appId": "BurntToasters.ROSI",
@@ -49,16 +50,16 @@
         "yt-dlp.exe"
       ]
     },
-"appx": {
-  "identityName": "BurntToasters.ROSI",
-  "publisher": "CN=BC0CB990-55E8-4580-97B7-1E2DAA4B44F6",
-  "publisherDisplayName": "BurntToasters",
-  "displayName": "ROSI",
-  "backgroundColor": "#ffffff",
-  "minVersion": "10.0.10240.0",
-  "maxVersionTested": "10.0.22621.0",
-  "customManifestPath": "build/appx/appxmanifest.xml"
-},
+    "appx": {
+      "identityName": "BurntToasters.ROSI",
+      "publisher": "CN=BC0CB990-55E8-4580-97B7-1E2DAA4B44F6",
+      "publisherDisplayName": "BurntToasters",
+      "displayName": "ROSI",
+      "backgroundColor": "#ffffff",
+      "minVersion": "10.0.10240.0",
+      "maxVersionTested": "10.0.22621.0",
+      "customManifestPath": "build/appx/appxmanifest.xml"
+    },
     "mac": {
       "target": "dmg",
       "icon": "build/app-icon.png",
