--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "electron": "electron .",
     "build": "electron-builder",
-    "build:win-x64": "node build-scripts/prepare-x64.js && electron-builder --win --x64 -c.win.target=appx",
-    "build:win-arm64": "node build-scripts/prepare-arm64.js && electron-builder --win --arm64 -c.win.target=appx"
+    "build:win:x64": "node build-scripts/prepare-x64.js && electron-builder --win --x64 -c.win.target=appx",
+    "build:win:arm64": "node build-scripts/prepare-arm64.js && electron-builder --win --arm64 -c.win.target=appx"
   },
   "repository": {
     "type": "git",
